--- a/js/app/templates/partials/srcitem.html
+++ b/js/app/templates/partials/srcitem.html
@@ -4,7 +4,7 @@
     <span class="glyphicon glyphicon-calendar"></span> {{campus_src.pubdate}}
     <span class="banner-right">
         <span><span class="numjoined">{{campus_src.numJoined}}</span></span>
-        <span class="btnJoin"><a href="#" class="btn btn-default btn-info btn-xs">Join <span class="glyphicon glyphicon-hand-right"></span></a></span>
+        <span class="btnJoin"><a href="{{campus_src.joinLink}}" class="btn btn-default btn-info btn-xs">Join <span class="glyphicon glyphicon-hand-right"></span></a></span>
     </span>
 </div>
 <div class="content row">
