--- a/js/app/templates/partials/srclist.html
+++ b/js/app/templates/partials/srclist.html
@@ -7,7 +7,11 @@
 	    <span class="glyphicon glyphicon-calendar"></span> {{pubdate}}
 	    <span class="banner-right">
 	    	<span><span class="numjoined">{{numJoined}}</span></span>
-	    	<span class="btnJoin"><a href="#" class="btn btn-default btn-info btn-xs">Join <span class="glyphicon glyphicon-hand-right"></span></a></span>
+	    	{{#if ../noJoinLink}}
+        <span> joined </span>
+        {{else}}
+	    	<span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default btn-info btn-xs">Join <span class="glyphicon glyphicon-hand-right"></span></a></span>
+	    	{{/if}}
 	    </span>
 	</div>
 	<div class="content row">
