--- a/js/app/templates/partials/trainingitem.html
+++ b/js/app/templates/partials/trainingitem.html
@@ -5,7 +5,10 @@
     <br/><br/>
     <span class="glyphicon glyphicon-globe"></span> <b>{{campus_training.room}}</b> <span class="splitter"> | </span>
     <span>Difficulty:</span> {{campus_training.Rank}}
-    <span class="pull-right numjoined">{{campus_training.numJoined}} joined </span>
+    <span class="banner-right">
+        <span><span class="numjoined">{{campus_training.numJoined}}</span></span>
+        <span class="btnJoin"><a href="{{campus_training.joinLink}}" class="btn btn-default btn-info btn-xs">register <span class="glyphicon glyphicon-hand-right"></span></a></span>
+    </span>
 </div>
 <div class="content bodycontent">
    <p>{{{campus_training.content}}}</p>
@@ -19,7 +22,3 @@
     {{/each}}
 </div>
 {{/if}}
-
-<div class="footer">
-<div class="buttons"><a target="_blank" href="{{campus_training.joinLink}}">register</a> <span class=" icon glyphicon glyphicon-circle-arrow-right"></span></div>
-</div>
