--- a/css/app/base.css
+++ b/css/app/base.css
@@ -6,8 +6,8 @@ body{
 }
 
 h1,h2,h3,h4, h5,h6 {
-   /*  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important; */
-   font-family: "Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif !important;
+     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important;
+   /* font-family: "Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif !important; */
 }
 
 * a {color : #aaa;}
