--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -6,7 +6,7 @@
         <p class="name">{{contacts.name}}</p>
         <p class="chinese">{{contacts.chinesename}}</p>
         <p class="title">
-            <a href="mailto: {{contacts.email}}" class="btn btn-default btn-link btn-xs"><span class="glyphicon glyphicon-envelope"></span> {{contacts.email}}</a>
+            <a href="mailto: {{contacts.email}}" class="">{{contacts.email}}</a>
         </p>
         <dl class="below dl-horizontal">
             <dt>project</dt>
