--- a/js/app/templates/partials/trainingitem.html
+++ b/js/app/templates/partials/trainingitem.html
@@ -7,7 +7,7 @@
     <span>Difficulty:</span> {{campus_training.Rank}}
     <span class="banner-right">
         <span><span class="numjoined">{{campus_training.numJoined}}</span></span>
-        <span class="btnJoin"><a href="{{campus_training.joinLink}}" class="btn btn-default btn-info btn-xs">register <span class="glyphicon glyphicon-hand-right"></span></a></span>
+        <span class="btnJoin"><a href="{{campus_training.joinLink}}" class="btn btn-default btn-xs">register</a></span>
     </span>
 </div>
 <div class="content bodycontent">
