update src page

--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -5,13 +5,13 @@
           <div class="form-group">
             <label for="exampleInputEmail1">Event Category</label>
             <div class="btn-group" data-toggle="buttons">
-                <label class="btn  active">
+                <label class="btn  btn-default active">
                   <input type="radio" name="options" id="option1" checked> Option 1 (preselected)
                 </label>
-                <label class="btn ">
+                <label class="btn btn-default ">
                   <input type="radio" name="options" id="option2"> Option 2
                 </label>
-                <label class="btn ">
+                <label class="btn btn-default ">
                   <input type="radio" name="options" id="option3"> Option 3
                 </label>
             </div>
