--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -23,7 +23,7 @@
             <h1>keywords</h1>
             <div class="form-controls">                
                 <input type="text" class="form-control inline-control"  size="50" name="keyword" placeholder="Enter keyword" />
-                <button type="submit" class="btn btn-primary btn-sm">Search</button>
+                <button type="submit" class="btn btn-primary btn-sm ">Search</button>
             </div>
           </section>
       </form>
@@ -31,4 +31,9 @@
 </section>
 <section class="panel panel-list">
     <div class="panel-body panel-body-list"></div>
+    <div class="campus-item seemore">
+      <div class="link">
+        see {{loadnum}} more items
+      </div>
+    </div>
 </section>
