--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -2,7 +2,7 @@
 <div class="admin-edit"><a target="_blank" href="#" title="click to edit current resource list"><i class="fa fa-pencil fa-fw"></i> </a></div>
 <section class="panel panel-searchbox">
     <div class="panel-body panel-body-searchbox">
-      <form role="form">
+      <form role="form" class="frmSearch">
 
           {{#each filters}}
           <section class="form-group clearfix">
