--- a/css/app/module.css
+++ b/css/app/module.css
@@ -1138,7 +1138,6 @@ a.profilelink:hover img{
 /* profile src list */
 .campus-items .campus-item {
     border: 1px solid #ddd;
-    margin-bottom: 20px;
     border-radius: .5em;
     margin-top: 20px;
     -webkit-box-shadow: 0px 6px 8px -6px #474646;
@@ -1218,8 +1217,21 @@ a.profilelink:hover img{
     margin: 0 0 20px 5px;
 }
 
-.listpagebase .panel-body{
+.panel-list .panel-body{
     padding: 0 15px;
+}
+
+.panel-list .panel-body .campus-items{
+    padding:0 15px;
+    -webkit-transition: background 1s;
+    -moz-transition: background 1s;
+    -ms-transition: background 1s;
+    -o-transition: background 1s;
+    transition: background 1s;
+}
+
+.panel-list .panel-body .campus-items.highlighted {
+    background: #FCF19F;
 }
 
 .listpagebase .panel-body-searchbox {
