--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -36,18 +36,20 @@
       {{#if itemMode}}
         <div class="panel-body panel-body-list"></div>
       {{else}}
-        <table class="table table-hover panel-body-list">
-          {{#if tableColumns}}
-          <thead>
-            <tr>
-              <th>#</th>
-              {{#each tableColumns}}
-              <th>{{this}}</th>
-              {{/each}}
-            </tr>
-          </thead>
-          {{/if}}
-        </table>
+        <div class="panel-body">
+          <table class="table table-hover panel-body-list">
+            {{#if tableColumns}}
+            <thead>
+              <tr>
+                <th>#</th>
+                {{#each tableColumns}}
+                <th>{{this}}</th>
+                {{/each}}
+              </tr>
+            </thead>
+            {{/if}}
+          </table>
+        </div>
       {{/if}}
     
     <div class="campus-item seemore">
