--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -61,10 +61,11 @@
           </table>
         </div>
       {{/if}}
-    
+    {{#unless noMoreButton}}
     <div class="campus-item seemore">
       <div class="link">
         see {{loadnum}} more items
       </div>
     </div>
+    {{/unless}}
 </section>
