--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -1,10 +1,12 @@
 <h1>{{title}}</h1>
+{{#if pageTip}}
+<div class="sub pageTip"><span class="glyphicon glyphicon-info-sign"></span> {{pageTip}} </div>
+{{/if}}
 <div class="admin-edit"><a target="_blank" href="#" title="click to edit current resource list"><i class="fa fa-pencil fa-fw"></i> </a></div>
 {{#unless noSearchBox}}
 <section class="panel panel-searchbox">
     <div class="panel-body panel-body-searchbox">
       <form role="form" class="frmSearch">
-
           {{#each filters}}
           <section class="form-group clearfix">
             <h1>{{title}}</h1>
